@@ -255,11 +255,11 @@ class ZMPlugins extends ZMService {
 
         foreach ($this->getPluginsForType('request') as $id => $plugin) {
             // PHP4 hack; use $$id rather than $plugin
-            global $id;
-            if ($$id->isEnabled()) {
-                $pluginHandler = $$id->getPluginHandler();
+            global $$id; $plugin =& $$id;
+            if ($plugin->isEnabled()) {
+                $pluginHandler = $plugin->getPluginHandler();
                 if (null !== $pluginHandler && is_subclass_of($pluginHandler, 'ZMPluginHandler')) {
-                    $pluginHandler->setPlugin($$id);
+                    $pluginHandler->setPlugin($plugin);
                     $contents = $pluginHandler->filterResponse($contents);
                 }
             }
